test/example/controller/error/500_handler.js
'use strict';

module.exports = {
  get: () => {
    throw Error('ERROR');
  },
};
